added week 4, part 2

--- a/week_4_networks_iii/week_4_notebook.ipynb
+++ b/week_4_networks_iii/week_4_notebook.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2c6b7501",
    "metadata": {},
    "outputs": [
@@ -617,17 +617,34 @@
     "\n",
     "# Excludes non-artist wikilinks\n",
     "exclude_prefixes = (\n",
-    "    \"Category:\", \"Template:\", \"File:\", \"Wikipedia:\",\n",
-    "    \"Help:\", \"Portal:\", \"Talk:\", \"Book:\", \"Draft:\"\n",
+    "    \"Category:\",\n",
+    "    \"Template:\",\n",
+    "    \"File:\",\n",
+    "    \"Wikipedia:\",\n",
+    "    \"Help:\",\n",
+    "    \"Portal:\",\n",
+    "    \"Talk:\",\n",
+    "    \"Book:\",\n",
+    "    \"Draft:\",\n",
     ")\n",
     "\n",
     "manual_excludes = [\n",
-    "    \"AllMusic\", \"Rolling Stone\", \"rock music\", \"Heavy Metal\", \n",
-    "    \"Punk Rock\", \"Alternative Rock\", \"Classic Rock\", \"singles\",\n",
-    "    \"album charts\", \"streaming\", \"downloads\", \"airplay\"\n",
+    "    \"AllMusic\",\n",
+    "    \"Rolling Stone\",\n",
+    "    \"rock music\",\n",
+    "    \"Heavy Metal\",\n",
+    "    \"Punk Rock\",\n",
+    "    \"Alternative Rock\",\n",
+    "    \"Classic Rock\",\n",
+    "    \"singles\",\n",
+    "    \"album charts\",\n",
+    "    \"streaming\",\n",
+    "    \"downloads\",\n",
+    "    \"airplay\",\n",
     "]\n",
     "artist = [\n",
-    "    link for link in artists\n",
+    "    link\n",
+    "    for link in artists\n",
     "    if link not in manual_excludes and not link.startswith(exclude_prefixes)\n",
     "]\n",
     "\n",
@@ -675,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "755193e4",
    "metadata": {},
    "outputs": [
@@ -706,17 +723,34 @@
     "\n",
     "# Step 5: Remove unwanted links (categories, templates, etc.)\n",
     "exclude_prefixes = (\n",
-    "    \"Category:\", \"Template:\", \"File:\", \"Wikipedia:\",\n",
-    "    \"Help:\", \"Portal:\", \"Talk:\", \"Book:\", \"Draft:\"\n",
+    "    \"Category:\",\n",
+    "    \"Template:\",\n",
+    "    \"File:\",\n",
+    "    \"Wikipedia:\",\n",
+    "    \"Help:\",\n",
+    "    \"Portal:\",\n",
+    "    \"Talk:\",\n",
+    "    \"Book:\",\n",
+    "    \"Draft:\",\n",
     ")\n",
     "\n",
     "manual_excludes = [\n",
-    "    \"AllMusic\", \"Rolling Stone\", \"rock music\", \"Heavy Metal\", \n",
-    "    \"Punk Rock\", \"Alternative Rock\", \"Classic Rock\", \"singles\",\n",
-    "    \"album charts\", \"streaming\", \"downloads\", \"airplay\"\n",
+    "    \"AllMusic\",\n",
+    "    \"Rolling Stone\",\n",
+    "    \"rock music\",\n",
+    "    \"Heavy Metal\",\n",
+    "    \"Punk Rock\",\n",
+    "    \"Alternative Rock\",\n",
+    "    \"Classic Rock\",\n",
+    "    \"singles\",\n",
+    "    \"album charts\",\n",
+    "    \"streaming\",\n",
+    "    \"downloads\",\n",
+    "    \"airplay\",\n",
     "]\n",
     "artist_links = [\n",
-    "    link for link in artist_links\n",
+    "    link\n",
+    "    for link in artist_links\n",
     "    if link not in manual_excludes and not link.startswith(exclude_prefixes)\n",
     "]\n",
     "\n",
@@ -749,6 +783,14 @@
     "# # Load into NetworkX\n",
     "# G = nx.read_gexf(BytesIO(response.content))\n",
     "# print(f\"Loaded remote graph: {G.number_of_nodes()} nodes, {G.number_of_edges()} edges\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efcf92d9",
+   "metadata": {},
+   "source": [
+    "# Part 2: Building the Networks"
    ]
   }
  ],
